# duckdb-ion

./: .gitignore  AGENTS.md  CMakeLists.txt  DEVELOPMENT.md  Makefile  README.md  description.yml  extension_config.cmake  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml  ci.yml  duckdb-main-nightly.yml  pr.yml  repro-linux-amd64.yml
LICENSES/: ion-c-NOTICE.txt
cmake/: ionc.cmake  patch_ionc_tools.cmake
docs/: ION_JSON_COMPARISON.md  PERF.md  PLAN.md  README.md  REFACTORING_PLAN.md  TEMPLATE_README.md
scripts/: generate_binary_ion_fixtures.py  ion_extractor_repro.cpp  mem_check.sh  perf_compare.py  perf_run.sh  run_unittest_debug.sh
src/: ion_copy.cpp  ion_extension.cpp  ion_serialize.cpp
src/include/: ion_copy.hpp  ion_extension.hpp  ion_serialize.hpp
src/include/ion/: README.md  ion_stream.hpp  ionc_shim.hpp  read_ion.hpp  read_ion_bind.hpp  read_ion_infer.hpp  read_ion_profile.hpp  read_ion_scan.hpp  read_ion_value.hpp
src/ion/: ion_copy.cpp  ion_serialize.cpp  read_ion_bind.cpp  read_ion_infer.cpp  read_ion_profile.cpp  read_ion_register.cpp  read_ion_scan.cpp  read_ion_value.cpp
test/: README.md
test/ion/: array_text.ion  blobs_binary.ion  blobs_text.ion  bools_binary.ion  floats_binary.ion  floats_text.ion  lists_binary.ion  lists_text.ion  multi_1.ion  multi_2.ion  multi_union_2.ion  sample.ion  struct_map.ion  struct_sparse.ion  structs_name_int_binary.ion  structs_name_int_text.ion  structs_name_list_binary.ion  structs_name_list_text.ion  structs_text.ion
test/sql/: ion_copy.test  ion_read.test  ion_read_binary_basic.test  ion_read_binary_parity.test  ion_read_binary_scalars.test  ion_read_conflicts.test
vcpkg_ports/ion-c/: disable-tests-tools.patch  portfile.cmake  vcpkg.json
