cmake_minimum_required(VERSION 3.11)

# Set extension name here
set(TARGET_NAME ion)

# DuckDB's extension distribution supports vcpkg. As such, dependencies can be added in ./vcpkg.json and then
# used in cmake with find_package. Feel free to remove or replace with other dependencies.
# Note that it should also be removed from vcpkg.json to prevent needlessly installing it..
if(DEFINED VCPKG_TARGET_TRIPLET)
  set(IONC_VCPKG_DIR "${CMAKE_CURRENT_LIST_DIR}/vcpkg_installed/${VCPKG_TARGET_TRIPLET}/share/ion-c")
endif()
if(IONC_VCPKG_DIR AND EXISTS "${IONC_VCPKG_DIR}/IonCConfig.cmake")
  find_package(IonC CONFIG REQUIRED PATHS "${IONC_VCPKG_DIR}" NO_DEFAULT_PATH)
else()
  find_package(IonC CONFIG QUIET)
endif()

if(NOT IonC_FOUND)
  include(FetchContent)
  set(IONC_BUILD_TESTS OFF CACHE BOOL "" FORCE)
  set(BUILD_SHARED_LIBS OFF CACHE BOOL "" FORCE)
  FetchContent_Declare(
    ionc
    GIT_REPOSITORY https://github.com/amzn/ion-c.git
    GIT_TAG v1.1.4
  )
  FetchContent_GetProperties(ionc)
  if(NOT ionc_POPULATED)
    FetchContent_Populate(ionc)
    execute_process(
      COMMAND ${CMAKE_COMMAND} -DIONC_SOURCE_DIR=${ionc_SOURCE_DIR}
              -P ${CMAKE_CURRENT_LIST_DIR}/cmake/patch_ionc_tools.cmake
    )
    add_subdirectory(${ionc_SOURCE_DIR} ${ionc_BINARY_DIR})
  endif()
endif()

set(IONC_TARGET "")
set(IONC_INCLUDE_DIRS "")
set(IONC_LINK_LIB "")
set(IONC_INTERFACE_LIBS "")
if(TARGET IonC::ionc_static)
  set(IONC_TARGET IonC::ionc_static)
elseif(TARGET IonC::ionc)
  set(IONC_TARGET IonC::ionc)
endif()
if(IONC_TARGET)
  get_target_property(IONC_INCLUDE_DIRS ${IONC_TARGET} INTERFACE_INCLUDE_DIRECTORIES)
  get_target_property(IONC_LINK_LIB ${IONC_TARGET} IMPORTED_LOCATION)
  get_target_property(IONC_INTERFACE_LIBS ${IONC_TARGET} INTERFACE_LINK_LIBRARIES)
  if(NOT IONC_LINK_LIB)
    get_target_property(IONC_LINK_LIB ${IONC_TARGET} IMPORTED_LOCATION_RELEASE)
  endif()
  if(IONC_INTERFACE_LIBS MATCHES "NOTFOUND$")
    set(IONC_INTERFACE_LIBS "")
  endif()
endif()
if(NOT IONC_LINK_LIB)
  if(TARGET ionc_static)
    set(IONC_TARGET ionc_static)
  elseif(TARGET ionc)
    set(IONC_TARGET ionc)
  endif()
endif()
if(NOT IONC_LINK_LIB AND IONC_TARGET)
  set(IONC_LINK_LIB $<TARGET_FILE:${IONC_TARGET}>)
  get_target_property(IONC_INTERFACE_LIBS ${IONC_TARGET} INTERFACE_LINK_LIBRARIES)
  if(IONC_INTERFACE_LIBS MATCHES "NOTFOUND$")
    set(IONC_INTERFACE_LIBS "")
  endif()
  if(NOT IONC_INCLUDE_DIRS)
    get_target_property(IONC_INCLUDE_DIRS ${IONC_TARGET} INTERFACE_INCLUDE_DIRECTORIES)
  endif()
  if(NOT IONC_INCLUDE_DIRS)
    if(EXISTS "${ionc_SOURCE_DIR}/ionc/include/ionc/ion.h")
      set(IONC_INCLUDE_DIRS "${ionc_SOURCE_DIR}/ionc/include")
    else()
      set(IONC_INCLUDE_DIRS "${ionc_SOURCE_DIR}")
    endif()
  endif()
endif()
if(NOT IONC_LINK_LIB)
  find_package(IonC CONFIG REQUIRED)
  if(TARGET IonC::ionc_static)
    set(IONC_TARGET IonC::ionc_static)
  else()
    set(IONC_TARGET IonC::ionc)
  endif()
  get_target_property(IONC_INCLUDE_DIRS ${IONC_TARGET} INTERFACE_INCLUDE_DIRECTORIES)
  get_target_property(IONC_LINK_LIB ${IONC_TARGET} IMPORTED_LOCATION)
  get_target_property(IONC_INTERFACE_LIBS ${IONC_TARGET} INTERFACE_LINK_LIBRARIES)
  if(NOT IONC_LINK_LIB)
    get_target_property(IONC_LINK_LIB ${IONC_TARGET} IMPORTED_LOCATION_RELEASE)
  endif()
  if(IONC_INTERFACE_LIBS MATCHES "NOTFOUND$")
    set(IONC_INTERFACE_LIBS "")
  endif()
endif()
if(NOT IONC_LINK_LIB)
  message(FATAL_ERROR "IonC library location not found")
endif()

if(IONC_TARGET MATCHES "ionc_static")
  if(TARGET IonC::decNumber_static)
    list(APPEND IONC_INTERFACE_LIBS IonC::decNumber_static)
  elseif(TARGET decNumber_static)
    list(APPEND IONC_INTERFACE_LIBS decNumber_static)
  elseif(TARGET IonC::decNumber)
    list(APPEND IONC_INTERFACE_LIBS IonC::decNumber)
  elseif(TARGET decNumber)
    list(APPEND IONC_INTERFACE_LIBS decNumber)
  endif()
endif()

if((NOT IONC_INCLUDE_DIRS OR IONC_INCLUDE_DIRS MATCHES "NOTFOUND$") AND ionc_SOURCE_DIR)
  if(EXISTS "${ionc_SOURCE_DIR}/ionc/include/ionc/ion.h")
    set(IONC_INCLUDE_DIRS "${ionc_SOURCE_DIR}/ionc/include")
  elseif(EXISTS "${ionc_SOURCE_DIR}/include/ionc/ion.h")
    set(IONC_INCLUDE_DIRS "${ionc_SOURCE_DIR}/include")
  endif()
endif()

if(NOT IONC_INCLUDE_DIRS OR IONC_INCLUDE_DIRS MATCHES "NOTFOUND$")
  if(IonC_DIR)
    get_filename_component(_ionc_share_dir "${IonC_DIR}" DIRECTORY)
    get_filename_component(_ionc_prefix_dir "${_ionc_share_dir}" DIRECTORY)
    if(EXISTS "${_ionc_prefix_dir}/include/ionc/ion.h")
      set(IONC_INCLUDE_DIRS "${_ionc_prefix_dir}/include")
    endif()
  endif()
  if(NOT IONC_INCLUDE_DIRS AND VCPKG_TARGET_TRIPLET)
    set(_ionc_vcpkg_include "${CMAKE_CURRENT_LIST_DIR}/vcpkg_installed/${VCPKG_TARGET_TRIPLET}/include")
    if(EXISTS "${_ionc_vcpkg_include}/ionc/ion.h")
      set(IONC_INCLUDE_DIRS "${_ionc_vcpkg_include}")
    endif()
  endif()
endif()

if(IONC_INCLUDE_DIRS AND ionc_SOURCE_DIR)
  set(IONC_INCLUDE_OK FALSE)
  foreach(ionc_inc_dir IN LISTS IONC_INCLUDE_DIRS)
    if(EXISTS "${ionc_inc_dir}/ionc/ion.h")
      set(IONC_INCLUDE_OK TRUE)
    endif()
  endforeach()
  if(NOT IONC_INCLUDE_OK)
    if(EXISTS "${ionc_SOURCE_DIR}/ionc/include/ionc/ion.h")
      set(IONC_INCLUDE_DIRS "${ionc_SOURCE_DIR}/ionc/include")
    elseif(EXISTS "${ionc_SOURCE_DIR}/include/ionc/ion.h")
      set(IONC_INCLUDE_DIRS "${ionc_SOURCE_DIR}/include")
    endif()
  endif()
endif()

set(IONC_EXTRA_LIBS "")
foreach(ionc_lib IN LISTS IONC_INTERFACE_LIBS)
  if(TARGET ${ionc_lib})
    get_target_property(_ionc_lib_path ${ionc_lib} IMPORTED_LOCATION)
    if(NOT _ionc_lib_path)
      get_target_property(_ionc_lib_path ${ionc_lib} IMPORTED_LOCATION_RELEASE)
    endif()
    if(NOT _ionc_lib_path)
      set(_ionc_lib_path $<TARGET_FILE:${ionc_lib}>)
    endif()
    list(APPEND IONC_EXTRA_LIBS "${_ionc_lib_path}")
  else()
    list(APPEND IONC_EXTRA_LIBS "${ionc_lib}")
  endif()
endforeach()

set(EXTENSION_NAME ${TARGET_NAME}_extension)
set(LOADABLE_EXTENSION_NAME ${TARGET_NAME}_loadable_extension)

project(${TARGET_NAME})
include_directories(src/include)

set(EXTENSION_SOURCES
  src/ion_extension.cpp
  src/ion_copy.cpp
  src/ion_serialize.cpp)

build_static_extension(${TARGET_NAME} ${EXTENSION_SOURCES})
build_loadable_extension(${TARGET_NAME} " " ${EXTENSION_SOURCES})

if(IONC_INCLUDE_DIRS)
  target_include_directories(${EXTENSION_NAME} PRIVATE ${IONC_INCLUDE_DIRS})
  target_include_directories(${LOADABLE_EXTENSION_NAME} PRIVATE ${IONC_INCLUDE_DIRS})
endif()
target_link_libraries(${EXTENSION_NAME} ${IONC_LINK_LIB})
target_link_libraries(${LOADABLE_EXTENSION_NAME} ${IONC_LINK_LIB})
if(IONC_EXTRA_LIBS)
  target_link_libraries(${EXTENSION_NAME} ${IONC_EXTRA_LIBS})
  target_link_libraries(${LOADABLE_EXTENSION_NAME} ${IONC_EXTRA_LIBS})
endif()
target_compile_definitions(${EXTENSION_NAME} PRIVATE DUCKDB_IONC DECNUMDIGITS=34)
target_compile_definitions(${LOADABLE_EXTENSION_NAME} PRIVATE DUCKDB_IONC DECNUMDIGITS=34)

install(
  TARGETS ${EXTENSION_NAME}
  EXPORT "${DUCKDB_EXPORT_SET}"
  LIBRARY DESTINATION "${INSTALL_LIB_DIR}"
  ARCHIVE DESTINATION "${INSTALL_LIB_DIR}")
